Polynomial evaluation is now working
The module polynomial contains the function enc_poly which evaluates a
on an encrypted argument.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -53,9 +53,7 @@
     "\n",
     "# What are the specific primes in the modulus chain? These help calculate exact scales \n",
     "# of rescaled ciphertexts later on in this notebook. \n",
-    "modulus_chain = [modulus.value() for modulus in parms.coeff_modulus()]\n",
-    "\n",
-    "primes = [coeff.value() for coeff in parms.coeff_modulus()]\n",
+    "primes = [modulus.value() for modulus in parms.coeff_modulus()]\n",
     "\n",
     "context = seal.SEALContext(parms,True,seal.SEC_LEVEL_TYPE.TC128)\n",
     "\n",
@@ -73,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,12 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Worst way of copying a ciphertext - multiply by plaintext 1. Consumes one ciphertext level. \n",
-    "def bad_copy(cipher : seal.Ciphertext,scale : int, evaluator  : seal.Evaluator, encoder : seal.CKKSEncoder):\n",
+    "def bad_copy(cipher : seal.Ciphertext,scale : float, evaluator  : seal.Evaluator, encoder : seal.CKKSEncoder):\n",
     "    dummy_plain = seal.Plaintext()\n",
     "    encoder.encode(1, scale, dummy_plain)\n",
     "\n",
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -191,9 +189,9 @@
       "scale^3/P_1/P_2\n",
       "34360590350.1252\n",
       "Decrypted copy:\n",
-      "-0.5999999507772056\n",
+      "-0.5999997988613672\n",
       "Decrypted original:\n",
-      "-0.5999999513003557\n"
+      "-0.5999998549759393\n"
      ]
     }
    ],
@@ -227,7 +225,7 @@
     "\n",
     "# What are the specific primes in the modulus chain? \n",
     "print(\"\\nPrimes in the coefficient modulus chain:\")\n",
-    "print(modulus_chain)\n",
+    "print(primes)\n",
     "\n",
     "# What is the exact scale of the copied ciphertext?\n",
     "print(\"\\nCopy scale\")\n",
@@ -250,11 +248,11 @@
     "# Note that the exact scale of the new rescaled product\n",
     "# which happens to be the square of the original cipher is\n",
     "# exactly the scale of the original (scale) times the scale\n",
-    "# copy (scale**2)/modulus_chain[-2] (the first prime), which \n",
+    "# copy (scale**2)/primes[-2] (the first prime), which \n",
     "# is then rescaled (divided by the next prime in the chain), \n",
-    "# modulus_chain[-3]\n",
+    "# primes[-3]\n",
     "print(\"scale^3/P_1/P_2\")\n",
-    "print(scale**3/modulus_chain[-2]/modulus_chain[-3])\n",
+    "print(scale**3/primes[-2]/primes[-3])\n",
     "\n",
     "tmp_result = seal.Plaintext()\n",
     "decryptor.decrypt(x_copy, tmp_result)\n",
@@ -289,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -345,9 +343,9 @@
      "output_type": "stream",
      "text": [
       "Exponent is 4 leading to circuit with depth 2\n",
-      "Encrypted result is: 1.296002E-01\n",
+      "Encrypted result is: 1.296000E-01\n",
       "True result is: 1.296000E-01\n",
-      "Error is: 1.9327E-07\n"
+      "Error is: 2.6566E-08\n"
      ]
     }
    ],
@@ -386,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +395,7 @@
       "Ciphertext level after divByPo2: 6\n",
       "\n",
       "divByPo2 result: \n",
-      "-0.000585937472349454\n",
+      "-0.0005859374291153378\n",
       "True value: \n",
       "-0.0005859375000000001\n"
      ]
@@ -432,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -534,22 +532,22 @@
      "output_type": "stream",
      "text": [
       "35x/2^4\n",
-      "\tEnc. result:\t-1.3125001755103025\n",
+      "\tEnc. result:\t-1.3124999026240207\n",
       "\tPlain result:\t-1.3125000000000002\n",
       "\tScale:\t549761056802.0001\n",
       "\tCh. ind:\t5\n",
       "35x^3/2^4\n",
-      "\tEnc. result:\t-0.47250007385581344\n",
+      "\tEnc. result:\t-0.47250009745983323\n",
       "\tPlain result:\t-0.47250000000000025\n",
       "\tScale:\t549803526483.5916\n",
       "\tCh. ind:\t3\n",
       "21x^5/2^4\n",
-      "\tEnc. result:\t-0.10206002736599178\n",
+      "\tEnc. result:\t-0.102060203007469\n",
       "\tPlain result:\t-0.10206000000000007\n",
       "\tScale:\t549853341343.267\n",
       "\tCh. ind:\t2\n",
       "5x^7/2^4\n",
-      "\tEnc. result:\t-0.008748005707963065\n",
+      "\tEnc. result:\t-0.008747942961520866\n",
       "\tPlain result:\t-0.00874800000000001\n",
       "\tScale:\t549887427425.6552\n",
       "\tCh. ind:\t2\n"
@@ -601,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -610,12 +608,12 @@
      "text": [
       "Scale of 5x^7/2^4:\t549887427425.6552\n",
       "35x\n",
-      "\tEnc. result:\t-1.3121985474725357\n",
+      "\tEnc. result:\t-1.3121982746489667\n",
       "\tPlain result:\t-1.3125000000000002\n",
       "\tScale:\t549887427425.6552\n",
       "\tCh. ind:\t2\n",
       "35x^3\n",
-      "\tEnc. result:\t-0.47242798055208546\n",
+      "\tEnc. result:\t-0.47242800415250363\n",
       "\tPlain result:\t-0.47250000000000025\n",
       "\tScale:\t549887427425.6552\n",
       "\tCh. ind:\t2\n"
@@ -650,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -658,17 +656,17 @@
      "output_type": "stream",
      "text": [
       "35x-35x^3\n",
-      "\tEnc. result:\t-0.8397705669204507\n",
+      "\tEnc. result:\t-0.8397702704964628\n",
       "\tPlain result:\t-0.84\n",
       "\tScale:\t549887427425.6552\n",
       "\tCh. ind:\t2\n",
       "35x-35x^3+21x^5\n",
-      "\tEnc. result:\t-0.9418242678524709\n",
+      "\tEnc. result:\t-0.9418241470590732\n",
       "\tPlain result:\t-0.94206\n",
       "\tScale:\t549887427425.6552\n",
       "\tCh. ind:\t2\n",
       "g(x) = 35x-35x^3+21x^5-5x^7\n",
-      "\tEnc. result:\t-0.933076262144508\n",
+      "\tEnc. result:\t-0.9330762040975522\n",
       "\tPlain result:\t-0.933312\n",
       "\tScale:\t549887427425.6552\n",
       "\tCh. ind:\t2\n"
@@ -686,20 +684,12 @@
     "print(\"35x-35x^3+21x^5\")\n",
     "util.print_info(res, decryptor, context, encoder, (35*x-35*x**3+21*x**5)/2**4)\n",
     "# Finally add -5x^7/2**4\n",
-    "\n",
     "evaluator.sub_inplace(res, x7_coeff)\n",
     "\n",
     "print(\"g(x) = 35x-35x^3+21x^5-5x^7\")\n",
     "util.print_info(res, decryptor, context, encoder, (35*x-35*x**3+21*x**5-5*x**7)/2**4)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
