Composite polynomial working.
Calculating the composite polynomial suggested in the sorting article
is now working.

In several places, CT-levels are wasted.

- When copying a ciphertext to use in square and multiply
- When manually controlling the scale of g(x) before calculating f(g(x))

--- a/test_polynomial.ipynb
+++ b/test_polynomial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -24,24 +24,37 @@
       "/\n",
       "|Encryption parameters: \n",
       "|\tscheme: CKKS\n",
-      "|\tpoly_modulus_degree: 16384\n",
-      "|\tcoeff_modulus_size: 400 (60 35 35 35 35 35 35 35 35 60) bits\n",
-      "|\t Max Bit Count: 438\n"
+      "|\tpoly_modulus_degree: 32768\n",
+      "|\tcoeff_modulus_size: 870 (60 50 50 50 50 50 50 50 50 50 50 50 50 50 50 50 60) bits\n",
+      "|\t Max Bit Count: 881\n"
      ]
     }
    ],
    "source": [
     "parms = seal.EncryptionParameters(seal.SCHEME_TYPE.CKKS)\n",
-    "poly_modulus_degree = 2**14\n",
-    "mod_pow = 35\n",
+    "# How large should plaintexts be? This determines number of available levels for a certain bit size, number of data slots and security. \n",
+    "poly_modulus_degree = 2**15\n",
+    "# Bit size for primes in modulus chain. Larger -> more available options, slower performance. \n",
+    "bit_size = 50\n",
+    "# How many data levels do we need?\n",
+    "levels = 15\n",
+    "# Create modulus chain\n",
+    "mod_chain_bit_size = [bit_size for k in range(levels)]\n",
+    "# First and last primes are \"special\" in SEAL, and should always be 60 bit primes.  \n",
+    "mod_chain_bit_size.insert(0,60)\n",
+    "mod_chain_bit_size.append(60)\n",
+    "\n",
+    "# Set parameters (this involves involves finding candidate primes for the modulus chain)\n",
     "parms.set_poly_modulus_degree(poly_modulus_degree)\n",
-    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [60,mod_pow,mod_pow, mod_pow,mod_pow,mod_pow,mod_pow,mod_pow,mod_pow,60]))\n",
-    "scale = pow(2.0, mod_pow)\n",
+    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, mod_chain_bit_size))\n",
+    "scale = pow(2.0, bit_size)\n",
     "\n",
     "# What are the specific primes in the modulus chain? These help calculate exact scales \n",
     "# of rescaled ciphertexts later on in this notebook. \n",
     "primes = [modulus.value() for modulus in parms.coeff_modulus()]\n",
     "\n",
+    "# The creation of a SEAL context does not include a check to see if parameter settings\n",
+    "# are valid. This is done later during key creation. \n",
     "context = seal.SEALContext(parms,True,seal.SEC_LEVEL_TYPE.TC128)\n",
     "\n",
     "util.print_parameters(context)\n",
@@ -58,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of slots: 8192\n"
+      "Number of slots: 16384\n"
      ]
     }
    ],
@@ -102,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +150,7 @@
     "\n",
     "power = 4\n",
     "\n",
-    "enc_g_x = enc_poly(x_enc, coeffs, degrees, power, evaluator, context, encoder,  parms, relin_keys, encryptor)"
+    "enc_g_x = enc_poly(x_enc, coeffs,degrees, power, evaluator, context, encoder,  parms, relin_keys, encryptor)"
    ]
   },
   {
@@ -156,21 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tEnc. result:\t-0.9330960635156593\n",
+      "\tEnc. result:\t-0.9333119703475723\n",
       "\tPlain result:\t-0.933312\n",
-      "\tScale:\t549887427425.6552\n",
-      "\tCh. ind:\t4\n",
-      "\tEnc. result:\t-0.9333817853662447\n",
+      "\tScale:\t1.8014399111364388e+16\n",
+      "\tCh. ind:\t11\n",
+      "\tEnc. result:\t-0.9333120054413637\n",
       "\tPlain result:\t-0.933312\n",
-      "\tScale:\t34359738368.0\n",
-      "\tCh. ind:\t3\n"
+      "\tScale:\t1125899906842624.0\n",
+      "\tCh. ind:\t10\n"
      ]
     }
    ],
@@ -191,6 +204,7 @@
     "evaluator.rescale_to_next_inplace(enc_g_x)\n",
     "enc_g_x.scale = scale\n",
     "\n",
+    "plain_g_x = (35*x-35*x**3+21*x**5-5*x**7)/2**4\n",
     "util.print_info(enc_g_x, decryptor, context, encoder, (35*x-35*x**3+21*x**5-5*x**7)/2**4)"
    ]
   },
@@ -204,23 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "scale out of bounds",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/davsv512@user.uu.se/python/SealAPI_Tutorial/test_polynomial.ipynb Cell 12\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/test_polynomial.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m coeffs \u001b[39m=\u001b[39m [\u001b[39m4589\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m16577\u001b[39m, \u001b[39m25614\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m12860\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/test_polynomial.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m power \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/test_polynomial.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m enc_compare \u001b[39m=\u001b[39m enc_poly(enc_g_x, coeffs, degrees, power, evaluator, context, encoder, parms, relin_keys, encryptor)\n",
-      "File \u001b[0;32m~/python/SealAPI_Tutorial/polynomial.py:48\u001b[0m, in \u001b[0;36menc_poly\u001b[0;34m(arg, coefficients, degrees, power, evaluator, context, encoder, parms, relin_keys, encryptor)\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[39m# Note that we need to waste at least one CT-level when \u001b[39;00m\n\u001b[1;32m     45\u001b[0m     \u001b[39m# using this copy method. \u001b[39;00m\n\u001b[1;32m     46\u001b[0m     evaluator\u001b[39m.\u001b[39mmod_switch_to_inplace(x_deg, arg_copy\u001b[39m.\u001b[39mparms_id())\n\u001b[0;32m---> 48\u001b[0m     square_and_multiply(arg_copy, exponent, evaluator, relin_keys, original_scale, encoder, x_deg)\n\u001b[1;32m     49\u001b[0m     arg_degrees\u001b[39m.\u001b[39mappend(x_deg)\n\u001b[1;32m     51\u001b[0m \u001b[39m#-------------------- STEP 2 -----------------------#\u001b[39;00m\n\u001b[1;32m     52\u001b[0m \u001b[39m# We can now \"multiply\" by the PT coefficient, this is done by \u001b[39;00m\n\u001b[1;32m     53\u001b[0m \u001b[39m# by repeatedly adding CT to avoid multiplications. \u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[39m# (inspired by sorting article using CKKS)\u001b[39;00m\n",
-      "File \u001b[0;32m~/python/SealAPI_Tutorial/polynomial.py:124\u001b[0m, in \u001b[0;36msquare_and_multiply\u001b[0;34m(cipher, exp, evaluator, relin_keys, scale, encoder, res)\u001b[0m\n\u001b[1;32m    122\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCiphertext res must be initialized to 1.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    123\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 124\u001b[0m     evaluator\u001b[39m.\u001b[39;49mmultiply_inplace(res, cipher)\n\u001b[1;32m    125\u001b[0m     relinearize_and_rescale_inplace(res, evaluator, relin_keys)\n\u001b[1;32m    126\u001b[0m     evaluator\u001b[39m.\u001b[39msquare_inplace(cipher)\n",
-      "\u001b[0;31mValueError\u001b[0m: scale out of bounds"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Not working, unsure why scale is out of bound. With this method,\n",
     "# we should achieve scale stabilization. Check scale stabilization \n",
@@ -228,29 +228,36 @@
     "coeffs = [4589, -16577, 25614, -12860]\n",
     "power = 10\n",
     "\n",
-    "\n",
+    "plain_f_g_x = (4589*plain_g_x-16577*plain_g_x**3+25614*plain_g_x**5-12860*plain_g_x**7)/2**10\n",
     "enc_compare = enc_poly(enc_g_x, coeffs, degrees, power, evaluator, context, encoder, parms, relin_keys, encryptor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tEnc. result:\t-0.9330961981934047\n",
-      "\tPlain result:\t-0.933312\n",
-      "\tScale:\t549887427425.6552\n",
-      "\tCh. ind:\t3\n"
+      "\tEnc. result:\t-0.9885385040606761\n",
+      "\tPlain result:\t-0.9885385398999578\n",
+      "\tScale:\t1.152921615000919e+18\n",
+      "\tCh. ind:\t6\n"
      ]
     }
    ],
    "source": [
-    "util.print_info(enc_compare, decryptor, context, encoder, (35*x-35*x**3+21*x**5-5*x**7)/2**4)"
+    "util.print_info(enc_compare, decryptor, context, encoder, plain_f_g_x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
