--- a/test_polynomial.ipynb
+++ b/test_polynomial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
       "|Encryption parameters: \n",
       "|\tscheme: CKKS\n",
       "|\tpoly_modulus_degree: 32768\n",
-      "|\tcoeff_modulus_size: 870 (60 50 50 50 50 50 50 50 50 50 50 50 50 50 50 50 60) bits\n",
+      "|\tcoeff_modulus_size: 670 (60 50 50 50 50 50 50 50 50 50 50 50 60) bits\n",
       "|\t Max Bit Count: 881\n"
      ]
     }
@@ -37,7 +37,7 @@
     "# Bit size for primes in modulus chain. Larger -> more available options, slower performance. \n",
     "bit_size = 50\n",
     "# How many data levels do we need?\n",
-    "levels = 15\n",
+    "levels = 11\n",
     "# Create modulus chain\n",
     "mod_chain_bit_size = [bit_size for k in range(levels)]\n",
     "# First and last primes are \"special\" in SEAL, and should always be 60 bit primes.  \n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,21 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tEnc. result:\t-0.9333119703475723\n",
+      "\tEnc. result:\t-0.9333119703141972\n",
       "\tPlain result:\t-0.933312\n",
       "\tScale:\t1.8014399111364388e+16\n",
-      "\tCh. ind:\t11\n",
-      "\tEnc. result:\t-0.9333120054413637\n",
+      "\tCh. ind:\t7\n",
+      "\tEnc. result:\t-0.93331200541354\n",
       "\tPlain result:\t-0.933312\n",
       "\tScale:\t1125899906842624.0\n",
-      "\tCh. ind:\t10\n"
+      "\tCh. ind:\t6\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,17 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tEnc. result:\t-0.9885385040606761\n",
+      "\tEnc. result:\t-0.9885385047226911\n",
       "\tPlain result:\t-0.9885385398999578\n",
       "\tScale:\t1.152921615000919e+18\n",
-      "\tCh. ind:\t6\n"
+      "\tCh. ind:\t2\n"
      ]
     }
    ],
