Update with fewer CT levels.

--- a/test_polynomial.ipynb
+++ b/test_polynomial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
       "|Encryption parameters: \n",
       "|\tscheme: CKKS\n",
       "|\tpoly_modulus_degree: 32768\n",
-      "|\tcoeff_modulus_size: 670 (60 50 50 50 50 50 50 50 50 50 50 50 60) bits\n",
+      "|\tcoeff_modulus_size: 620 (60 50 50 50 50 50 50 50 50 50 50 60) bits\n",
       "|\t Max Bit Count: 881\n"
      ]
     }
@@ -37,7 +37,7 @@
     "# Bit size for primes in modulus chain. Larger -> more available options, slower performance. \n",
     "bit_size = 50\n",
     "# How many data levels do we need?\n",
-    "levels = 11\n",
+    "levels = 10\n",
     "# Create modulus chain\n",
     "mod_chain_bit_size = [bit_size for k in range(levels)]\n",
     "# First and last primes are \"special\" in SEAL, and should always be 60 bit primes.  \n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,21 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tEnc. result:\t-0.9333119703141972\n",
+      "\tEnc. result:\t-0.9333119703448047\n",
       "\tPlain result:\t-0.933312\n",
       "\tScale:\t1.8014399111364388e+16\n",
-      "\tCh. ind:\t7\n",
-      "\tEnc. result:\t-0.93331200541354\n",
+      "\tCh. ind:\t6\n",
+      "\tEnc. result:\t-0.9333120054440106\n",
       "\tPlain result:\t-0.933312\n",
       "\tScale:\t1125899906842624.0\n",
-      "\tCh. ind:\t6\n"
+      "\tCh. ind:\t5\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,30 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tEnc. result:\t-0.9885385047226911\n",
+      "\tEnc. result:\t-0.9885385043903193\n",
       "\tPlain result:\t-0.9885385398999578\n",
       "\tScale:\t1.152921615000919e+18\n",
-      "\tCh. ind:\t2\n"
+      "\tCh. ind:\t1\n"
      ]
     }
    ],
    "source": [
     "util.print_info(enc_compare, decryptor, context, encoder, plain_f_g_x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
