--- a/test_polynomial.ipynb
+++ b/test_polynomial.ipynb
@@ -149,7 +149,7 @@
     "\n",
     "Multiplying by the plain factor $\\Delta/\\tilde{\\Delta}$ and manually changing the scale gives an encryption of $\\Delta g(x)$ with the correct scale factor, but consumes an additional CT-level. \n",
     "\n",
-    "Providing the original scale, together with choosing `reset_scale` True will perform this manual rescaling after computation is done. This consumes one CT-level but produces a CT with the same scale as a fresh CT, making scale stabilization and further operations possible. "
+    "Providing the original scale, together with choosing `reset_scale`=True will perform this manual rescaling after computation is done. This consumes one CT-level but produces a CT with the same scale as a fresh CT, making scale stabilization and further operations possible. "
    ]
   },
   {
@@ -165,11 +165,6 @@
     "\n",
     "enc_g_x = enc_poly(x_enc, coeffs,degrees, power, evaluator, context, encoder, relin_keys, encryptor,True,scale)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
