Typo in figure legend

--- a/test_polynomial.ipynb
+++ b/test_polynomial.ipynb
@@ -305,7 +305,7 @@
     "ax.set_ylabel(\"$(f(g(a-b))+1)/2$\")\n",
     "ax.set_xlabel(\"a-b\")\n",
     "ax.grid(True)\n",
-    "ax.legend(['Enc. res.', 'Plain res.', 'a<b'])\n",
+    "ax.legend(['Enc. res.', 'Plain res.', 'a>b'])\n",
     "plt.show()"
    ]
   }
